siembol enrichment: adding table_metadata virtual field into enrichment tables (#671)
* adding table_metadata virtual field into enrichment tables

* Delete pom.xml.orig

* adding documentation